# react-admin-template

./: .gitignore  README.md
admin/: Dockerfile  README.md  index.html  package-lock.json  package.json
admin/public/: index.html
admin/src/: App.js  App.tsx  authProvider.js  authProvider.ts  config.js  config.ts  dataProvider.js  dataProvider.ts  index.css
admin/src/components/: RichTextEditor.jsx  RichTextEditor.tsx  SubFoldersTable.jsx  SubFoldersTable.tsx
admin/src/pages/admins/: CreateAdmin.tsx  EditAdmin.jsx  ListAdmins.tsx
admin/src/pages/dashboard/: Card.jsx  Card.tsx  Dashboard.jsx  Dashboard.tsx
api/: .gitignore  Dockerfile  api.py  modules.py  pyproject.toml  requirements.txt
api/routes/: __init__.py  admins.py  models.py
api/services/: APScheduler.py
api/settings/: config.py
api/src/: app.py  asgi.py
api/src/routes/general/: __init__.py  admins.py
api/src/settings/: config.json  config.py
api/src/utils/: dependencies.py
api/src/utils/db_toolkit/SQLALchemy/: db.py
api/src/utils/db_toolkit/SQLALchemy/utils/: databases.py
api/utils/db_toolkit/: db_toolkit.py
api/utils/db_toolkit/SQLALchemy/utils/: models.py
api/utils/db_toolkit/SQLALchemy/utils/tables/: admins.py
